solved: sorting alphabet and array

--- a/4.md
+++ b/4.md
@@ -6,7 +6,7 @@
 
 ### RESTRICTION
 
-- Only allowed to use built-in function `.push()`
+- Only allowed to use built-in function `.push()` and `.length`
 
 ### HINTS
 
