--- a/5.md
+++ b/5.md
@@ -9,7 +9,7 @@
 
 ### RESTRICTION
 
-- Only allowed to use built-in functions for adding or removing data in arrays, such as `shift()`, `unshift()`, `push()`, and `pop()` or built-in functions for changing characters to uppercase or lowercase.
+- Only allowed to use built-in functions for adding or removing data in arrays, such as `shift()`, `unshift()`, `push()`, and `pop()` or built-in functions for changing characters to uppercase or lowercase and `.length`.
 
 ### HINTS
 
